# notion-line-api

./: .clinerules  .env.example  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: usecase.mmd
src/: config.py  get_database.py  main.py  notion.py
tests/: test_get_database.py  test_main.py  test_notion.py
