[tool.poetry]
name = "notion-line-api"
version = "0.1.0"
description = "Integration between Notion and other services"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
notion-client = "^2.3.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
ruff = "^0.11.0"           # flake8, isort, black の代わりに ruff のみを使用
mypy = "^1.8.0"            # 型チェックは mypy を継続使用
jupyterlab = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff設定 (flake8, isort, black の設定を統合)
[tool.ruff]
# 基本設定
line-length = 88
target-version = "py311"
fix = true

# 新規の推奨設定方法
[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "ARG", "SIM", "ERA"]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

# 型チェック設定は mypy を使用
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
disallow_untyped_calls = true
ignore_missing_imports = true
follow_imports = "skip"

# テスト設定
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
